--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  width: 100px;
   pointer-events: none;
 }
 
@@ -13,21 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +20,47 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-header {
+  background-color: #282c34;
+  height: auto;
+  width: 100%;
+  display: flex;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.container{
+  width: 100%;
+  max-width: 1100px;
+}
+
+.logo-container{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todolist{
+    margin: auto;
+}
+.todolist-add{
+    width: 100%;
+    padding: 2rem;
+}
+
+.todolist-add input {
+    margin: 0 1rem;
+}
+
+.task-item, .edit-task{
+    display: none;
+}
+
+.task-item.show, .edit-task.show{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1px solid rgba(0,0,0,.1)
 }
