--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  width: 100px;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  height: auto;
-  width: 100%;
-  display: flex;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.container{
-  width: 100%;
-  max-width: 1100px;
-}
-
-.logo-container{
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .todolist{
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 .todolist-add{
     width: 100%;
     padding: 2rem;
 }
 
+
+
 .todolist-add input {
     margin: 0 1rem;
+}
+
+.todolist-list{
+    padding: 1rem;
 }
 
 .task-item, .edit-task{
@@ -62,5 +27,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 1px solid rgba(0,0,0,.1)
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    padding: 1rem;
 }
