--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 *{
-  border: 0;
+  margin:0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -43,4 +43,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  max-width: 1100px;
+  width: 100%;
 }
