replace id's by react.createRef

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,9 @@
     border-bottom: 1px solid rgba(0,0,0,.1);
     padding: 1rem;
 }
+
+button {
+    -webkit-appearance: button;
+    -moz-appearance:    button;
+    appearance:         button;
+ }
