--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -39,7 +39,7 @@
     position: fixed;
     top:0;
     left: 0;
-    background-color: rgba(var(--primary-color),0.5);
+    background-color: rgba(0,0,0,0.5);
     z-index:100;
     opacity:0;
     pointer-events: none;
